tests/paczka1/fuzzy1/99023690.err
Error in line 6: hVhZovmUDX A307 41,1
Error in line 18: GeJI S36 8,9
Error in line 28: hVhZovmUDX S36 60,40
Error in line 27: 1io18c S44 56,6
Error in line 40: S44 S44 256,49
